// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET and POST 1`] = `
"POST host/service/$batch HTTP/1.1
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers('ALFKI') HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

POST Customers HTTP/1.1
Content-Type: application/atom+xml;type=entry

<AtomPub representation of a new Customer>
--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;

exports[`GET only 1`] = `
"POST host/service/$batch HTTP/1.1
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers('ALFKI') HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Products HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;
